# commercetools-python-sdk

./: .bumpversion.cfg  .editorconfig  .gitignore  .readthedocs.yml  .travis.yml  CHANGES  CHANGES.md  MANIFEST.in  Makefile  README.md  README.rst  azure-pipelines.yml  mypy.ini  pycharm_debug.py  pyproject.toml  setup.cfg  setup.py  tox.ini
codegen/: README.md  __main__.py  abstract_gen.py  generate_abstract.py  generate_schema.py  generate_services.py  generate_types.py  main.py  raml_types.py  schema_gen.py  service_processor.py  type_processor.py  types_gen.py  utils.py  yaml.py
docs/: conf.py  index.rst
tests/: conftest.py  test_client.py  test_custom_fields.py  test_errors.py  test_expand.py  test_fields.py  test_helpers.py  test_mock_server.py  test_pagination.py  test_predicate.py  test_products.py  test_products_query.json  test_schemas.py  test_service_api_clients.py  test_service_cart.py  test_service_cart_discounts.py  test_service_categories.py  test_service_channels.py  test_service_custom_objects.py  test_service_customer_groups.py  test_service_customers.py  test_service_discount_codes.py  test_service_extensions.py  test_service_inventory.py  test_service_order.py  test_service_payment.py  test_service_product_discounts.py  test_service_product_projections.py  test_service_product_types.py  test_service_products.py  test_service_project.py  test_service_reviews.py  test_service_shipping_methods.py  test_service_shopping_lists.py  test_service_states.py  test_service_stores.py  test_service_tax_category.py  test_testing_headers.py  test_types.py  (+2 more)
(+825 files in other folders)
