
[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = ["commercetools", "tests", "codegen"]
use_parentheses = true
indent_style = "space"
indent_size = 4
tab_width = 4
